# Synonym

./: config.properties  pom.xml  pom.xml.backup  readme.md  synonym.db
CPP/ecs_engine/: CMakeLists.txt  README.md  main.cpp
CPP/ecs_engine/include/: CombatSystem.h  ComponentPool.h  Components.h  Entity.h  EntityManager.h  IComponentPool.h  ISystem.h  LifetimeSystem.h  MovementSystem.h  RenderSystem.h  TypeId.h  World.h
CPP/ecs_engine/src/: CombatSystem.cpp  Components.cpp  Entity.cpp  EntityManager.cpp  LifetimeSystem.cpp  MovementSystem.cpp  RenderSystem.cpp  World.cpp
Synonym/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
Synonym/electron/: main.js  preload.js
Synonym/python/: firstrun.py
Synonym/src/: App.jsx
Synonym/src/components/: FileTable.jsx  FileTable.module.css  ProfileModal.jsx  ProfileModal.module.css  ProgressOverlay.jsx  ProgressOverlay.module.css  RightPanel.jsx  RightPanel.module.css  Sidebar.jsx  Sidebar.module.css
Synonym/src/lib/: api.js
Synonym/src/pages/: Auth.module.css  ForgotPage.jsx  LoginPage.jsx  MainWindow.jsx  MainWindow.module.css  SignupPage.jsx  Visualizer.jsx  Visualizer.module.css
Synonym/src/styles/: global.css
src/main/java/com/aiexplorer/: AIFileExplorerApp.java
src/main/resources/: firstrun.py  genre_classifier.pkl
src/main/resources/com/aiexplorer/: hello-view.fxml
src/main/resources/fxml/: dashboard.fxml  forgot-password.fxml  login.fxml  main-window.fxml  profile.fxml  signup.fxml
src/main/resources/styles/: auth-theme.css  dark-professional-theme.css
(+19 files in other folders)
